syntax = "proto3";

package CarServer;

option go_package = "github.com/teslamotors/vehicle-command/pkg/protocol/protobuf/carserver";
option java_package = "com.tesla.generated.carserver.common";

enum Invalid {
    INVALID = 0;
}

message Void {}

message LatLong {
    float latitude = 1;
    float longitude = 2;
}

message PreconditioningTimes {
    oneof times {
        Void all_week = 1;
        Void weekdays = 2;
    }
}

message OffPeakChargingTimes {
    oneof times {
        Void all_week = 1;
        Void weekdays = 2;
    }
}

message ChargeSchedule {
    uint64                      id                      = 1; // datetime in epoch time
    string                      name                    = 2;
    int32                       days_of_week            = 3;
    bool                        start_enabled           = 4;
    int32                       start_time              = 5; // 24h in minutes
    bool                        end_enabled             = 6;
    int32                       end_time                = 7; // 24h in minutes
    bool                        one_time                = 8;
    bool                        enabled                 = 9;
    float                       latitude                = 10;
    float                       longitude               = 11;
}

message PreconditionSchedule {
    uint64                      id                      = 1; // datetime in epoch time
    string                      name                    = 2;
    int32                       days_of_week            = 3;
    int32                       precondition_time       = 4; // 24h in minutes
    bool                        one_time                = 5;
    bool                        enabled                 = 6;
    float                       latitude                = 7;
    float                       longitude               = 8;
}
